# opencv-face-detection

./: local.properties  settings.gradle
detection/: build.gradle
detection/src/main/: AndroidManifest.xml
detection/src/main/cpp/: CMakeLists.txt  api.map  bitmap_utils.cpp  bitmap_utils.h  cmake_android_arm.sh  com_example_camera_FaceDetection.cpp  com_example_camera_FaceDetection.h
detection/src/main/java/com/example/camera/: FaceDetection.java  MainActivity.java  MyFullSurfaceView.java  MySurfaceView.java  MySurfaceViewActivity.java  MyView.java  MyViewActivity.java
detection/src/main/res/layout/: activity_main.xml
